--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,3 +12,45 @@
   background-color: $bgBlack;
   color: $fontWhite;
 }
+
+.idType {
+  color: $fontWhite;
+
+  > div {
+    cursor: pointer;
+    font-size: 20px;
+    &:hover {
+      color: $fontYellow;
+    }
+    &:first-child {
+      margin-bottom: 40px;
+    }
+  }
+}
+
+.idSet {
+  color: $fontWhite;
+  font-size: 20px;
+  text-align: center;
+  .title,
+  input {
+    margin-bottom: 25px;
+  }
+
+  .title {
+    color: #9cdcfe;
+  }
+
+  input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid $fontGray;
+  }
+
+  .confirm {
+    cursor: pointer;
+    &:hover {
+      color: $fontYellow;
+    }
+  }
+}
