--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100vh;
   background-color: rgba($color: #000000, $alpha: 0.4);
+  z-index: 999;
   &.hide {
     display: none;
   }
