--- a/src/components/TextInput/TextInput.module.scss
+++ b/src/components/TextInput/TextInput.module.scss
@@ -13,6 +13,7 @@
     display: block;
     height: 100px;
     width: 100%;
+    color: $fontWhite;
   }
   .submit {
     background-color: #303030;
