--- a/src/commonStyle.scss
+++ b/src/commonStyle.scss
@@ -1,4 +1,6 @@
-$bgBlack: #1e1e1e;
+$bgBlack: #282c34;
+$tabBlack: #333842;
+$asideBlack: #21252b;
 $fontWhite: #d4d4d4;
 $fontGray: #707070;
 $fontBlue: #499cd6;
