[ADD] CSS style add

--- a/src/commonStyle.scss
+++ b/src/commonStyle.scss
@@ -1,8 +1,9 @@
-$bgBlack: #282c34;
+$bgBlack: #1e1e1e;
 $tabBlack: #333842;
-$asideBlack: #21252b;
+$tabGray: #414141;
+$bgGray: #303030;
 $fontWhite: #d4d4d4;
-$fontGray: #707070;
+$fontGray: #303030;
 $fontBlue: #499cd6;
 $fontGreen: #6a9955;
 $fontYellow: #d7ba7d;
