--- a/src/components/AsideBar/AsideBar.module.scss
+++ b/src/components/AsideBar/AsideBar.module.scss
@@ -1,14 +1,41 @@
 @import "../../commonStyle.scss";
 
 .aside {
-  background-color: $asideBlack;
-  padding: 25px;
+  background-color: $bgGray;
+  width: 300px;
+}
+
+.title {
+  padding: 15px;
+  text-align: center;
+  h2 {
+    font-size: 14px;
+    svg {
+      margin-right: 5.2px;
+    }
+    > * {
+      vertical-align: middle;
+    }
+  }
+}
+
+.subTitle {
+  background-color: $tabGray;
+  padding: 5px 15px;
+}
+
+.roomList {
+  padding: 15px;
   ul {
     list-style: none;
     padding: 0;
     margin: 0;
     li {
       margin-bottom: 10px;
+      &:hover {
+        color: $fontYellow;
+        cursor: pointer;
+      }
     }
   }
 }
