--- a/src/commonStyle.scss
+++ b/src/commonStyle.scss
@@ -1,9 +1,10 @@
 $bgBlack: #1e1e1e;
 $tabBlack: #333842;
 $tabGray: #414141;
+$lessGray: #434343;
 $bgGray: #303030;
 $fontWhite: #d4d4d4;
-$fontGray: #303030;
+$fontGray: #808080;
 $fontBlue: #499cd6;
 $fontGreen: #6a9955;
 $fontYellow: #d7ba7d;
