--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,8 +1,9 @@
-@import "commonStyle.scss";
+@import "../../commonStyle.scss";
 
 .App {
   font-size: 14px;
   font-family: "Consolas";
   display: flex;
   color: $fontWhite;
+  font-family: "Microsoft JhengHei";
 }
