--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -2,9 +2,10 @@
 
 .wrapper {
   flex-grow: 1;
-  padding: 25px;
+  padding: 15px;
   box-sizing: border-box;
   overflow-x: auto;
+  box-shadow: 0 6px 6px -6px #000000 inset;
 }
 
 .msgBox {
@@ -15,7 +16,7 @@
   }
   .time {
     padding-right: 15px;
-    color: $fontWhite;
+    color: $fontGray;
   }
   .msgTag {
     color: $fontBlue;
@@ -23,15 +24,26 @@
   .content {
     margin: 10px 0 10px 10px;
     padding-left: 10px;
-    border-left: 1px solid $fontWhite;
+    border-left: 1px solid $fontGray;
   }
   &.isSelf {
     .rightBox {
       margin-left: 40px;
     }
-
     .msgTag {
       color: $fontGreen;
     }
+  }
+}
+
+.alert {
+  .blue {
+    color: #499cd6;
+  }
+  .sky {
+    color: #9cdcfe;
+  }
+  .orange {
+    color: #ce9178;
   }
 }
