--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  background-color: rgba($color: #000000, $alpha: 0.4);
+  background-color: rgba($color: #000000, $alpha: 0.7);
   z-index: 999;
   &.hide {
     display: none;
@@ -27,15 +27,25 @@
 
 .idType {
   color: $fontWhite;
-
-  > div {
-    cursor: pointer;
-    font-size: 20px;
-    &:hover {
-      color: $fontYellow;
-    }
-    &:first-child {
-      margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  .someWord {
+    margin-bottom: 20px;
+    line-height: 1.5;
+  }
+  .btnBox {
+    display: flex;
+    > div {
+      cursor: pointer;
+      margin: 10px;
+      font-size: 24px;
+      &:hover {
+        color: $fontYellow;
+      }
+      // &:first-child {
+      //   margin-bottom: 40px;
+      // }
     }
   }
 }
@@ -57,6 +67,7 @@
     background-color: transparent;
     border: none;
     border-bottom: 1px solid $fontGray;
+    color: $fontWhite;
   }
 
   .confirm {
