--- a/src/components/TextInput/TextInput.module.scss
+++ b/src/components/TextInput/TextInput.module.scss
@@ -7,6 +7,7 @@
   color: $fontWhite;
   position: relative;
   box-sizing: border-box;
+  box-shadow: 0 6px 6px -6px #000000 inset;
   .textInput {
     background-color: transparent;
     border: none;
