--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -6,4 +6,8 @@
   display: flex;
   color: $fontWhite;
   font-family: "Microsoft JhengHei";
+  a {
+    text-decoration: none;
+    color: $fontWhite;
+  }
 }
