--- a/src/components/TabBar/TabBar.module.scss
+++ b/src/components/TabBar/TabBar.module.scss
@@ -10,10 +10,11 @@
     li {
       flex-basis: 200px;
       flex-shrink: 1;
-      // width: 200px;
-      padding: 15px;
       box-shadow: 1px 0px 1px #000;
-      cursor: pointer;
+      a {
+        display: block;
+        padding: 15px;
+      }
       &.active {
         background-color: $bgBlack;
       }
@@ -24,6 +25,9 @@
       position: absolute;
       right: 10px;
       top: 15px;
+      &:hover {
+        color: $fontYellow;
+      }
     }
   }
 }
