--- a/src/containers/App/App.module.scss
+++ b/src/containers/App/App.module.scss
@@ -1,3 +1,17 @@
+@import "../../commonStyle.scss";
+
+.App {
+  font-size: 14px;
+  font-family: "Consolas";
+  display: flex;
+  color: $fontWhite;
+  font-family: "Microsoft JhengHei";
+  a {
+    text-decoration: none;
+    color: $fontWhite;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,9 +19,4 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
